--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
   "name": "express-capsule",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "clean": "rimraf build",
-    "build": "npm run clean && tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.0.10",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "reflect-metadata": "^0.2.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
-  },
-  "devDependencies": {
-    "rimraf": "^6.0.1"
+ "main": "lib/index.js",
+ "types": "lib/index.d.ts",
+ "exports": {
+  ".": {
+   "import": "./lib/index.mjs",
+   "require": "./lib/index.js"
   }
+ },
+ "scripts": {
+  "build": "tsup",
+  "test": "echo \"Error: no test specified\" && exit 1"
+ },
+ "keywords": [],
+ "author": "",
+ "license": "ISC",
+ "devDependencies": {
+  "@types/node": "^24.0.10",
+  "tsup": "^8.5.0",
+  "typescript": "^5.8.3"
+ },
+ "dependencies": {
+  "cors": "^2.8.5",
+  "express": "^5.1.0",
+  "fs-extra": "^11.3.0",
+  "module-alias": "^2.2.3",
+  "reflect-metadata": "^0.2.2"
+ }
 }
