Enrichment readme file

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "express-spring",
   "version": "1.0.0",
   "author": "Xu Ming <xumingxiaoming@163.com>",
+  "contributors": [
+    "Yi Xuelian <ylian06@qq.com>"
+  ],
   "description": "Fast, easily to implemented api via decorators",
   "repository": "https://github.com/George19890716/express-decorator",
   "license": "ISC",
