--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     }
   },
   "scripts": {
-    "build": "tsup"
+    "build": "tsup",
+    "publish": "npm publish --access=public"
   },
   "keywords": [
     "decorator",
