--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "chalk": "^4.1.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "fs-extra": "^11.3.0",
